--- a/nodes/brew.yml
+++ b/nodes/brew.yml
@@ -33,7 +33,7 @@ brew:
     - node
     - pandoc
     - pngquant
-    - python3
+    - python
     - pyenv
     - rbenv
     - reattach-to-user-namespace
