--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
 script:
 - gem i bundler --no-doc
 - bundle exec itamae local recipes/all.rb -y nodes/brew.yml
+- bundle exec rake spec
 cache:
   directories:
   - vendor/bundle
