--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ os: osx
 before_install:
 - export HOMEBREW_NO_AUTO_UPDATE=1
 script:
-- gem i bundler --no-doc
-- bundle exec itamae local recipes/all.rb -y nodes/brew.yml
-- bundle exec rake spec
+- ./bin/ci/run.sh
 cache:
   directories:
   - vendor/bundle
