Add gui app list and rename to mac.yml

--- a/nodes/mac.yml
+++ b/nodes/mac.yml
@@ -56,3 +56,25 @@ brew:
     - caffeine
     - shiftit
     - font-open-sans
+
+gui:
+  packages:
+    - 1Password
+    - Android Studio
+    - Alfred
+    - App cleaner
+    - ATOK
+    - Atom
+    - Bear
+    - Diaplay menu
+    - Flux
+    - Google Chrome
+    - iTerm2
+    - Karabiner-elements 
+    - Neptune
+    - Onyx
+    - Sketch
+    - Slack
+    - TweetBot
+    - Vivaldi
+    - Xcode
