bat, replacement of cat

--- a/nodes/mac.yml
+++ b/nodes/mac.yml
@@ -9,6 +9,7 @@ brew:
     - git --with-brewed-curl --with-brewed-openssl
     - vim --with-lua --override-system-vi
     - zsh --without-etcdir
+    - bat
     - carthage
     - curl
     - -f emacs
