--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 os: osx
 before_install:
-- export HOMEBREW_NO_AUTO_UPDATE=1
+  - export HOMEBREW_NO_AUTO_UPDATE=1
 script:
-- ./init.sh
+- CI=true ./init.sh
 - bundle exec rake spec
 cache:
   directories:
