--- a/.github/workflows/provisioning.yml
+++ b/.github/workflows/provisioning.yml
@@ -13,3 +13,6 @@ jobs:
         set -ex
         CI=true ./init.sh
         bundle exec rake spec
+    - name: Notify failure message to slack
+      uses: rtCamp/action-slack-notify@v1.0.0
+      if: always()
