--- a/.github/workflows/provisioning.yml
+++ b/.github/workflows/provisioning.yml
@@ -14,5 +14,16 @@ jobs:
         CI=true ./init.sh
         bundle exec rake spec
     - name: Slack notify
-      uses: rtCamp/action-slack-notify@v1.0.0
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+      uses: k0kubun/action-slack@v2.0.0
+      with:
+        payload: |
+          {
+            "attachments": [{
+                "title": "${{ job.status }}: ${{ github.workflow }}",
+                "title_link": "${{ job.status}}: <https://github.com/${{ github.repository }}/commit/${{ github.sha }}/checks",
+                "text": "${{ github.repository }}@${{ github.ref }}: <https://github.com/${{ github.repository }}/commit/${{ github.sha }}|${{ github.sha }}>"
+            }]
+          }
       if: always()
