--- a/.github/workflows/provisioning.yml
+++ b/.github/workflows/provisioning.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Provisioning
       run: |
         set -ex
+        ./bin/ci/cleanup.sh
         CI=true ./init.sh
         bundle install --path vendor/bundle
         bundle exec rake spec
