--- a/.github/workflows/provisioning_linux.yml
+++ b/.github/workflows/provisioning_linux.yml
@@ -2,15 +2,15 @@ name: Provisioning on Linux
 
 on:
   push:
-  schedule:
-    - cron: 00 14 * * 1
+    branches:
+      - '**'
 
 jobs:
   build:
     runs-on: ubuntu-20.04
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Provisioning
       run: |
         ./init.sh
