--- a/.github/workflows/provisioning.yml
+++ b/.github/workflows/provisioning.yml
@@ -12,6 +12,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
+    - uses: ruby/setup-ruby@v1
+      with:
+        bundler-cache: true
     - name: Provisioning
       run: |
         set -ex
